<resources>
    <string name="app_name">Hitung Kalori Harian</string>
    <string name="intro">Apa itu TDEE? TDEE atau Total Daily Energy Expenditure adalah rata-rata energi yang dibakar dalam satu hari.</string>
    <string name="berat_badan">Berat badan (kg)</string>
    <string name="tinggi_badan">Tinggi badan (cm)</string>
    <string name="jenis_kelamin">Jenis kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hitung">Hitung</string>
    <string name="bmi_x">Kebutuhan Kalori Harian Anda Adalah: %1$.2f</string>
    <string name="kurus">Kurus</string>
    <string name="ideal">Ideal</string>
    <string name="gemuk">Gemuk</string>
    <string name="kategori_x">Kategori: %1$s</string>
    <string name="berat_invalid">Berat tidak boleh kosong.</string>
    <string name="tinggi_invalid">Tinggi tidak boleh kosong.</string>
    <string name="gender_invalid">Pilih jenis kelamin.</string>
    <string name="reset">Reset</string>
    <string name="judul_kurus">Mengatasi Kekurusan</string>
    <string name="judul_ideal">Menjaga Tetap Ideal</string>
    <string name="judul_gemuk">Mengatasi Kegemukan</string>
    <string name="saran_kurus">Cobalah untuk makan porsi besar, konsumsi lebih banyak protein dan kalori harian</string>
    <string name="saran_ideal">Pertahankan gaya hidupmu! tubuhmu sudah ideal</string>
    <string name="saran_gemuk">Cobalah untuk olahraga dan kurangin kalori harianmu.</string>
    <string name="lihat_saran">Lihat Saran</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">Aplikasi ini dibuat untuk Asesmen 2 Shaka Pratama Ichsan (6706213098)</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">Berat badan: %1$s kg\nTinggi badan: %2$s
cm\nJenis kelamin: %3$s\n\n%4$s\n%5$s</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="hasil_x">KALORI: %1$.2f</string>
    <string name="data_x">BB: %1$.1f - TB: %2$.1f - %3$s</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="umur">Umur</string>
    <string name="umur_invalid">umur tidak boleh kosong</string>

    <string name="result">"Kebutuhan Kalori Harian Anda Adalah: %1$.2f"</string>
    <string name="bmr_x">Kebutuhan Kalori Harian Anda Adalah: %1$.2f</string>
    <string name="aktifitas">Aktifitas</string>


    <string name="sangat_jarang">Sangat Jarang Olahraga: %1$.2f</string>
    <string name="jarang">Jarang Olahraga (1-2 kali seminggu): %1$.2f</string>
    <string name="normal">Olahraga Normal (2-3 kali seminggu): %1$.2f</string>
    <string name="sering">Sering Olahraga (4-5 kali seminggu): %1$.2f</string>
    <string name="sangat_sering">Sangat Sering Olahraga (2 kali sehari): %1$.2f</string>
    <string name="saran_kalori">Untuk menjaga asupan kalori, penting untuk menghitung kebutuhan kalori harian Anda, memilih makanan bergizi dan porsi yang tepat, serta mengurangi konsumsi makanan olahan dan minuman manis. Perbanyaklah makan sayuran, minum air yang cukup, dan pilih metode memasak yang sehat. Selain itu, perhatikan juga cemilan yang dikonsumsi dan tetap aktif dengan berolahraga secara teratur. Dengan menggabungkan langkah-langkah ini, Anda dapat menjaga asupan kalori Anda dan mempertahankan berat badan yang sehat.</string>
    <string name="judul_kalori">Cara Menjaga Asupan Kalori</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="koneksi_error">Koneksi Error</string>

    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data hewan otomatis</string>

    <string name="notif_title">Ingin Tahu Kebutuhan Kalorimu?</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>
</resources>