<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/hitungFragment">

    <fragment
        android:id="@+id/hitungFragment"
        android:name="org.d3if6706213098GaleriHewan.ui.hitung.HitungFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_hitung" >
        <action
            android:id="@+id/action_hitungFragment_to_saranFragment"
            app:destination="@id/saranFragment2" />
        <action
            android:id="@+id/action_hitungFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_historiFragment"
            app:destination="@id/historiFragment" />
    </fragment>
    <fragment
        android:id="@+id/saranFragment2"
        android:name="org.d3if6706213098GaleriHewan.ui.SaranFragment"
        android:label="SaranFragment"
        tools:layout="@layout/fragment_saran">
        <argument
            android:name="kategori"
            app:argType="org.d3if6706213098GaleriHewan.model.KategoriBmi" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if6706213098GaleriHewan.ui.AboutFragment"
        android:label="@string/tentang_aplikasi"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/historiFragment"
        android:name="org.d3if6706213098GaleriHewan.ui.histori.HistoriFragment"
        android:label="@string/histori"
        tools:layout="@layout/fragment_histori" />
</navigation>